--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-responsive-carousel": "^3.2.23",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "5.0.1",
     "react-scroll": "^1.8.7",
     "web-vitals": "^2.1.4"
   },
